Improving goto-datetime